--- a/index.html
+++ b/index.html
@@ -69,14 +69,20 @@
 		<font face="Lato" color ="#FFFFFF" size="6">SCOOBY'S SHELTER</font>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<font face="Lato" color ="#FFFFFF" size="4">Brought to you by </font>
-		<font face="Lato" color ="#FFFFFF" size="4">Anwesha Saha 2047211</font>
+		<font face="Lato" color ="#FFFFFF" size="4">Anwesha, Jobin & Udit</font>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
        
-		</div>
+		<font face="cinzel" size="4">
+			<a href="index.html">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="./modules/">Animal Aid</a>&nbsp;&nbsp;&nbsp;&nbsp;
+			<!-- <a href="./modules/">CONTACT US</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+			
+			<a href="./modules/">Login</a>
+		</font>
 
 	</h3>
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
