--- a/modules/index.html
+++ b/modules/index.html
@@ -64,7 +64,7 @@
 								<!-- <button type="submit" class="btn btn-primary btn-lg btn-block">LOGIN</button> -->
 								<button style="display: block; margin: 0 auto;" id="submit" class="btn btn-outline-secondary" disabled>Login</button>
 								<div class="bottom">
-									<span class="helper-text"><i class="fa fa-lock"></i> <a href="register.php">New User? Register here </a></span>
+									<span class="helper-text"><i class="fa fa-lock"></i> <a href="register.html">New User? Register here </a></span>
 								</div>
 							</form>
 
