--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
        
 		<font face="cinzel" size="4">
 			<a href="index.html">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="./modules/index.html">Animal Aid</a>&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="./modules/">Animal Aid</a>&nbsp;&nbsp;&nbsp;&nbsp;
 			<!-- <a href="./modules/">CONTACT US</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 			
-			<a href="./modules/index.html">Login</a>
+			<a href="./modules/">Login</a>
 		</font>
 
 	</h3>
